--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,15 @@
 ---
-abstract: 'Form Generation Helper'
+abstract: 'Generate HTML5 form label and input fields'
 author:
   - 'John Karr <brainbuz@brainbuz.org>'
 build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.008, CPAN::Meta::Converter version 2.133380'
+generated_by: 'Dist::Zilla version 5.016, CPAN::Meta::Converter version 2.132830'
 license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Form-Diva
-version: 0.001
+version: 0.0103
