--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,10 @@ license = GPL_3
 copyright_holder = John Karr
 copyright_year   = 2014
 
-version = 0.001
+version = 0.0103
 
 [@Basic]
 
-[TestRelease]
-[ConfirmRelease]
-[UploadToCPAN]
+;[TestRelease]
+;[ConfirmRelease]
+;[UploadToCPAN]
