--- a/META.yml
+++ b/META.yml
@@ -2,14 +2,21 @@
 abstract: 'Generate HTML5 form label and input fields'
 author:
   - 'John Karr <brainbuz@brainbuz.org>'
-build_requires: {}
+build_requires:
+  Storable: 0
+  Test::Exception: 0.32
+  Test::More: 1.00
+  perl: 5.006
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.016, CPAN::Meta::Converter version 2.132830'
+generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.132830'
 license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Form-Diva
-version: 0.0103
+requires:
+  strict: 0
+  warnings: 0
+version: 0.03
