--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,16 @@ license = GPL_3
 copyright_holder = John Karr
 copyright_year   = 2014
 
-version = 0.0103
+version = 0.03
 
 [@Basic]
 
-;[TestRelease]
-;[ConfirmRelease]
-;[UploadToCPAN]
+[PruneCruft]
+[AutoPrereqs]
+[PkgVersion]
+[PodVersion]
+
+[ExtraTests]
+[PodSyntaxTests]
+[PodCoverageTests]
+[Test::Perl::Critic]
