--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,9 @@ abstract: 'Generate HTML5 form label and input fields'
 author:
   - 'John Karr <brainbuz@brainbuz.org>'
 build_requires:
-  Storable: '0'
   Test::Exception: '0.32'
   Test::More: '1.00'
+  perl: '5.020'
 configure_requires:
   ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
@@ -16,6 +16,7 @@ meta-spec:
   version: '1.4'
 name: Form-Diva
 requires:
+  Storable: '0'
   strict: '0'
   warnings: '0'
-version: '0.04'
+version: '0.05'
