--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,9 @@ abstract: 'Generate HTML5 form label and input fields'
 author:
   - 'John Karr <brainbuz@brainbuz.org>'
 build_requires:
-  Carp::Always: '0'
+  Test::Deep: '0.112'
   Test::Exception: '0.32'
-  Test::More: '1.00'
+  Test::More: '1.001003'
 configure_requires:
   ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
@@ -20,4 +20,4 @@ requires:
   perl: '5.006'
   strict: '0'
   warnings: '0'
-version: '0.08'
+version: '0.09'
