Import of BRAINBUZ/Form-Diva-0.11 from CPAN.
gitpan-cpan-distribution: Form-Diva
gitpan-cpan-version:      0.11
gitpan-cpan-path:         BRAINBUZ/Form-Diva-0.11.tar.gz
gitpan-cpan-author:       BRAINBUZ
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -17,7 +17,11 @@ meta-spec:
 name: Form-Diva
 requires:
   Storable: '0'
-  perl: '5.006'
+  perl: '5.008'
   strict: '0'
   warnings: '0'
-version: '0.10'
+resources:
+  bugtracker: https://github.com/brainbuz/form-diva/issues
+  homepage: https://github.com/brainbuz/form-diva
+  repository: https://github.com/brainbuz/form-diva.git
+version: '0.11'
